# rust_playground

./: Cargo.toml
guessing_game/src/: main.rs
iterators/src/: lib.rs
playground/src/: main.rs
redys/: Cargo.toml
redys/examples/: server.rs
redys/src/: main.rs
rustbook_webserver/: Cargo.toml
rustbook_webserver/src/: lib.rs  main.rs
rustlings/exercises/: quiz1.rs  quiz2.rs
rustlings/exercises/enums/: enums1.rs  enums2.rs  enums3.rs
rustlings/exercises/error_handling/: errors2.rs  errors4.rs  errors5.rs  errors6.rs
rustlings/exercises/functions/: functions1.rs  functions4.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings/exercises/if/: if2.rs
rustlings/exercises/intro/: intro2.rs
rustlings/exercises/iterators/: iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings/exercises/lifetimes/: lifetimes1.rs
rustlings/exercises/modules/: modules1.rs  modules2.rs
rustlings/exercises/move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs
rustlings/exercises/options/: options1.rs  options2.rs
rustlings/exercises/primitive_types/: primitive_types2.rs  primitive_types3.rs  primitive_types5.rs
rustlings/exercises/smart_pointers/: rc1.rs
rustlings/exercises/strings/: strings3.rs
rustlings/exercises/structs/: structs1.rs  structs2.rs  structs3.rs
rustlings/exercises/tests/: tests2.rs  tests3.rs  tests4.rs
rustlings/exercises/vecs/: vecs1.rs
src/: akv_disk.rs  akv_mem.rs  auth.rs  lib.rs  main.rs  routes.rs  services.rs
stringsplit/: Cargo.toml
stringsplit/src/: lib.rs
(+9 files in other folders)
