[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
crc = "3.2.1"
serde = "1.0.217"
serde_derive = "1.0.217"
